sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:14: error: not found: value beforeRED
          swap(x,beforeRED)
                 ^